// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "data": Array [
    84,
    2,
    32,
    6,
    36,
    1,
    3,
    128,
    0,
    0,
    0,
    0,
    239,
    190,
    173,
    222,
    52,
    18,
    55,
    19,
    239,
    190,
    173,
    222,
    0,
    0,
    0,
    0,
    64,
    66,
    15,
    0,
    255,
    64,
    160,
    134,
    1,
    0,
    0,
    38,
    1,
    2,
    32,
    2,
    36,
    1,
  ],
  "type": "Buffer",
}
`;

exports[` 2`] = `
Object {
  "data": Array [
    84,
    2,
    32,
    6,
    36,
    1,
    4,
    128,
    0,
    0,
    0,
    0,
    239,
    190,
    173,
    222,
    33,
    67,
    55,
    19,
    239,
    190,
    173,
    222,
    0,
    0,
    0,
    0,
    64,
    66,
    15,
    0,
    255,
    77,
    64,
    13,
    3,
    0,
    0,
    76,
    131,
    8,
    50,
    48,
    48,
    52,
    50,
    52,
    54,
    54,
    51,
    48,
    54,
    52,
    51,
    48,
    54,
    53,
  ],
  "type": "Buffer",
}
`;

exports[` 3`] = `
Object {
  "data": Array [
    91,
    2,
    32,
    6,
    36,
    1,
    3,
    128,
    0,
    0,
    0,
    0,
    239,
    190,
    173,
    222,
    52,
    18,
    55,
    19,
    239,
    190,
    173,
    222,
    0,
    0,
    0,
    0,
    64,
    66,
    15,
    0,
    43,
    2,
    0,
    64,
    160,
    134,
    1,
    0,
    244,
    1,
    0,
    38,
    0,
    2,
    32,
    2,
    36,
    1,
  ],
  "type": "Buffer",
}
`;

exports[` 4`] = `
Object {
  "data": Array [
    91,
    2,
    32,
    6,
    36,
    1,
    4,
    128,
    0,
    0,
    0,
    0,
    239,
    190,
    173,
    222,
    33,
    67,
    55,
    19,
    239,
    190,
    173,
    222,
    0,
    0,
    0,
    0,
    64,
    66,
    15,
    0,
    255,
    1,
    0,
    76,
    64,
    13,
    3,
    0,
    176,
    4,
    0,
    76,
    130,
    8,
    50,
    48,
    48,
    52,
    50,
    52,
    54,
    54,
    51,
    48,
    54,
    52,
    51,
    48,
    54,
    53,
  ],
  "type": "Buffer",
}
`;

exports[` 5`] = `
Object {
  "data": Array [
    78,
    2,
    32,
    6,
    36,
    1,
    2,
    250,
    55,
    19,
    55,
    19,
    239,
    190,
    173,
    222,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[` 6`] = `
Object {
  "data": Array [
    78,
    2,
    32,
    6,
    36,
    1,
    2,
    250,
    55,
    19,
    55,
    19,
    239,
    190,
    173,
    222,
    8,
    0,
    50,
    48,
    48,
    52,
    50,
    52,
    54,
    54,
    51,
    48,
    54,
    52,
    51,
    48,
    54,
    53,
  ],
  "type": "Buffer",
}
`;

exports[` 7`] = `
Object {
  "data": Array [
    78,
    2,
    32,
    6,
    36,
    1,
    2,
    250,
    33,
    67,
    55,
    19,
    239,
    190,
    173,
    222,
    8,
    0,
    50,
    48,
    48,
    52,
    50,
    52,
    54,
    54,
    51,
    48,
    54,
    52,
    51,
    48,
    54,
    53,
  ],
  "type": "Buffer",
}
`;

exports[` 8`] = `
Object {
  "data": Array [
    82,
    2,
    32,
    6,
    36,
    1,
    3,
    250,
    24,
    0,
    48,
    101,
    48,
    53,
    50,
    49,
    48,
    48,
    48,
    49,
    48,
    48,
    50,
    53,
    48,
    48,
    48,
    50,
    48,
    48,
    51,
    48,
    48,
    51,
    2,
    0,
    48,
    49,
    48,
    49,
  ],
  "type": "Buffer",
}
`;
